<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/item_list_round">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_item_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <TextView
            android:id="@+id/txt_item_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario" />
    </LinearLayout>

        <TextView
            android:id="@+id/txt_item_descricao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:text="@string/descricao" />



        <TextView
            android:id="@+id/txt_item_valor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/valor" />





</LinearLayout>