<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/txt_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data" />

            <TextView
                android:id="@+id/txt_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horario" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_descricao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/descricao" />

        <TextView
            android:id="@+id/txt_valor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/valor" />
    </LinearLayout>


    <ListView
        android:id="@+id/lstViewItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:dividerHeight="10dp"
        android:divider="#ffffff" />
</LinearLayout>