<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:gravity="center"
        android:text="@string/desafio_mobits"
        android:textColor="@color/Black"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/conta_corrente" />

        <EditText
            android:id="@+id/editText_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autofillHints=""
            android:ems="10"
            android:maxLength="5"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/editText_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autofillHints=""
            android:ems="10"
            android:maxLength="4"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:text="" />


</LinearLayout>